2002-02-27 Edgar Luna <kheb@gnulinux.org.mx>

	* glines.c: Fix about dialog warning.

2002-02-17  Chris Lyttle  <chris@wilddev.net>

	* help/C/glines.xml: updated for new template.
	* help/C/Makefile.am:  added legal.xml
	* help/C/legal.xml:  added to comply with new template

2002-02-17  jacob berkman  <jacob@ximian.com>

	* Makefile.am (SUBDIRS): add help

2002-02-16  Kjartan Maraas  <kmaraas@gnome.org>

	* glines.c: #include <config.h> fix.
	
2002-02-14  Chris Lyttle    <chris@wilddev.net>

	* help/C/glines.xml : move to XML.
	* help/C/glines-C.omf : move to XML.
	* help/C/glines.sgml : deleted, move to XML.
	* help/C/Makefile.am : move to XML.

2002-02-02  Zbigniew Chyla  <cyba@gnome.pl>

	* glines.c (game_about_callback): Don't try to translate empty string.

2002-01-08  Josh Barrow  <drleary@mac.com>

	* glines.c: (game_quit_callback):
	Commit patch from Markus Bertheau <twanger@bluetwanger.de>
	to actually make this thing quit.

2002-01-02  Josh Barrow  <drleary@mac.com>

	* Makefile.am:
	* glines.c:
	Moved *_DISABLE_DEPRECATED to the Makefile.am

2002-01-02  Josh Barrow  <drleary@mac.com>

	* glines.c: (load_image), (draw_box), (draw_ball), (expose_event),
	(game_maybe_quit), (game_about_callback), (load_theme_cb),
	(fill_menu), (game_props_callback), (game_quit_callback),
	(save_state), (main):
	Ported to use non-deprecated functions.

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* glines.desktop:

	Install into the proper location and add a Categories
	field.
	
2001-12-04  Duarte Loreto <happyguy_pt@hotmail.com>

        * glines.desktop: Added Portuguese (pt) translation.

2001-12-04  Kevin Vandersloot <kfv101@psu.edu>

	* glines.c: When starting a new game flash a simple message
	indicating how to score this game since I could never
	figure out how this game worked - Thanks Iain for showing
	me how :)

2001-08-18  Matthias Warkus  <mawarkus@gnome.org>

	* glines.png: New icon by Timothy Musson, added by permission of