@@ -1,3 +1,13 @@
+2002-04-15  Bastien Nocera  <hadess@hadess.net>
+
+	* ChangeLog:
+	* glines.c: (game_about_callback): remove nstr(), patch from
+	r_kinder@yahoo.com (Richard Kinder)
+
+2002-04-15  Bastien Nocera  <hadess@hadess.net>
+
+	* glines.c: (game_about_callback): have a nice icon
+
 2002-02-27 Edgar Luna <kheb@gnulinux.org.mx>
 
 	* glines.c: Fix about dialog warning.
